force-app/main/default/objects/IME_RM_Competitor__c/IME_RM_Competitor__c.object-meta.xml
<CustomObject>
    <label>RM Competitor</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RM Competitor Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>