force-app/main/default/objects/IME_RM_Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>If there is no competitor, or you don’t know who the competitor is, scroll to the end of the list and select “No/unknown competitor”)</inlineHelpText>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAA (triple A)</fullName>
            </value>
            <value>
                <fullName>Abbott Datastore</fullName>
            </value>
            <value>
                <fullName>Access Storage</fullName>
            </value>
            <value>
                <fullName>Acorn Records Management</fullName>
            </value>
            <value>
                <fullName>ADEA, Administradora de Archivos. S.A</fullName>
            </value>
            <value>
                <fullName>Adhoc (Plumada)</fullName>
            </value>
            <value>
                <fullName>ADOCAT, SA</fullName>
            </value>
            <value>
                <fullName>A J Stephenson Storage</fullName>
            </value>
            <value>
                <fullName>Aktenlager</fullName>
            </value>
            <value>
                <fullName>Albion Self Storage</fullName>
            </value>
            <value>
                <fullName>Alligator Self Storage</fullName>
            </value>
            <value>
                <fullName>Anacomp</fullName>
            </value>
            <value>
                <fullName>Anglian Archives</fullName>
            </value>
            <value>
                <fullName>Arc Data Storage</fullName>
            </value>
            <value>
                <fullName>archiva Gmbh</fullName>
            </value>
            <value>
                <fullName>Archivbern</fullName>
            </value>
            <value>
                <fullName>Archive 2000</fullName>
            </value>
            <value>
                <fullName>Archives Express</fullName>
            </value>
            <value>
                <fullName>Archive Solutions</fullName>
            </value>
            <value>
                <fullName>Archivezürich</fullName>
            </value>
            <value>
                <fullName>Archivist Ltd</fullName>
            </value>
            <value>
                <fullName>Arcplace</fullName>
            </value>
            <value>
                <fullName>Attric</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Bathers Self Storage</fullName>
            </value>
            <value>
                <fullName>BCSM - Business Continuity Management</fullName>
            </value>
            <value>
                <fullName>Big Yellow</fullName>
            </value>
            <value>
                <fullName>Bishops Blatchpack Storage</fullName>
            </value>
            <value>
                <fullName>Blue Box</fullName>
            </value>
            <value>
                <fullName>Bootham Removals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>