force-app/main/default/objects/IME_RM_Competitor__c/fields/Handling_Charge__c.field-meta.xml
<CustomField>
    <fullName>Handling_Charge__c</fullName>
    <inlineHelpText>Price per Handling Charge per item, equivalent to Bill Code 0220. Please use ‘0’ to indicate a free service. If you don’t know the price, please enter ‘-‘</inlineHelpText>
    <label>Handling Charge</label>
    <length>18</length>
    <type>Text</type>
</CustomField>