force-app/main/default/objects/IME_RM_Competitor__c/fields/Minimum_Storage_Charge__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Storage_Charge__c</fullName>
    <inlineHelpText>Equivalent to Bill Code 3475. Please use ‘0’ to indicate a free service. If you don’t know the price, please enter ‘-‘</inlineHelpText>
    <label>Minimum Storage Charge</label>
    <length>18</length>
    <type>Text</type>
</CustomField>