force-app/main/default/objects/IME_RM_Competitor__c/fields/Retrieval_File__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_File__c</fullName>
    <inlineHelpText>Price per retrieval,  equivalent to Bill Code 0121. Please use ‘0’ to indicate a free service. If you don’t know the price, please enter ‘-‘</inlineHelpText>
    <label>Retrieval File</label>
    <length>18</length>
    <type>Text</type>
</CustomField>