force-app/main/default/objects/IME_RM_Competitor__c/fields/Rush_Transport__c.field-meta.xml
<CustomField>
    <fullName>Rush_Transport__c</fullName>
    <inlineHelpText>Price per Rush Trip, equivalent to Bill Code 0214. Please use ‘0’ to indicate a free service. If you don’t know the price, please enter ‘-‘</inlineHelpText>
    <label>Rush Transport</label>
    <length>18</length>
    <type>Text</type>
</CustomField>