force-app/main/default/objects/IME_RM_Competitor__c/fields/Std_Journey_Charge__c.field-meta.xml
<CustomField>
    <fullName>Std_Journey_Charge__c</fullName>
    <inlineHelpText>Price per stand Next Day Trip, equivalent to Bill Code 0211. Please use ‘0’ to indicate a free service. If you don’t know the price, please enter ‘-‘</inlineHelpText>
    <label>Standard Journey</label>
    <length>18</length>
    <type>Text</type>
</CustomField>