force-app/main/default/objects/IME_RM_Competitor__c/fields/Winning_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Winning_Competitor__c</fullName>
    <inlineHelpText>If the Opportunity was lost, is this the winning competitor?</inlineHelpText>
    <label>Winning Competitor?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>