force-app/main/default/objects/IME_RM_Competitor__c/validationRules/Admin_Fee_not_numerical.validationRule-meta.xml
<ValidationRule>
    <fullName>Admin_Fee_not_numerical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( Unknown_Pricing__c = True), Admin_Fee__c &lt;&gt;&quot;-&quot;, NOT(ISNUMBER( Admin_Fee__c )))</errorConditionFormula>
    <errorDisplayField>Admin_Fee__c</errorDisplayField>
    <errorMessage>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</errorMessage>
</ValidationRule>