force-app/main/default/objects/IME_RM_Competitor__c/validationRules/IME_NoCompetitorIsSelected.validationRule-meta.xml
<ValidationRule>
    <fullName>IME_NoCompetitorIsSelected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Opportunity__r.IME_Nb_NoUnknownCompetitor__c &gt;0, 
    NOT(
        ISPICKVAL(
                  PRIORVALUE(Competitor__c),
                  &quot;-No/Unknown Competitor-&quot;
                  )
       )
)</errorConditionFormula>
    <errorMessage>This opportunity has a No/Unknown Competitor. Please remove it before creating any new competitor.</errorMessage>
</ValidationRule>