force-app/main/default/objects/IME_RM_Competitor__c/validationRules/Min_Storage_Charge_not_numerical.validationRule-meta.xml
<ValidationRule>
    <fullName>Min_Storage_Charge_not_numerical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( Unknown_Pricing__c = True), Minimum_Storage_Charge__c  &lt;&gt;&quot;-&quot;, NOT(ISNUMBER( Minimum_Storage_Charge__c )))</errorConditionFormula>
    <errorDisplayField>Minimum_Storage_Charge__c</errorDisplayField>
    <errorMessage>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</errorMessage>
</ValidationRule>