force-app/main/default/objects/IME_RM_Competitor__c/validationRules/Permanent_Withdrawal_not_numerical.validationRule-meta.xml
<ValidationRule>
    <fullName>Permanent_Withdrawal_not_numerical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( Unknown_Pricing__c = True), Permanent_Withdrawal__c  &lt;&gt;&quot;-&quot;, NOT(ISNUMBER( Permanent_Withdrawal__c )))</errorConditionFormula>
    <errorDisplayField>Permanent_Withdrawal__c</errorDisplayField>
    <errorMessage>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</errorMessage>
</ValidationRule>