force-app/main/default/objects/IME_RM_Competitor__c/validationRules/Retrieval_File_not_numerical.validationRule-meta.xml
<ValidationRule>
    <fullName>Retrieval_File_not_numerical</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT( Unknown_Pricing__c = True),Retrieval_File__c   &lt;&gt;&quot;-&quot;, NOT(ISNUMBER( Retrieval_File__c )))</errorConditionFormula>
    <errorDisplayField>Retrieval_File__c</errorDisplayField>
    <errorMessage>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</errorMessage>
</ValidationRule>