force-app/main/default/objects/IME_RM_Competitor__c/validationRules/Rush_Transport_not_numerical.validationRule-meta.xml
<ValidationRule>
    <fullName>Rush_Transport_not_numerical</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( Unknown_Pricing__c = True), Rush_Transport__c &lt;&gt;&quot;-&quot;, NOT(ISNUMBER( Rush_Transport__c )))</errorConditionFormula>
    <errorDisplayField>Rush_Transport__c</errorDisplayField>
    <errorMessage>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</errorMessage>
</ValidationRule>