force-app/main/default/objects/IME_RM_Competitor__c/validationRules/Std_Journey_Charge_not_numerical.validationRule-meta.xml
<ValidationRule>
    <fullName>Std_Journey_Charge_not_numerical</fullName>
    <active>true</active>
    <description>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</description>
    <errorConditionFormula>AND(NOT( Unknown_Pricing__c = True), Std_Journey_Charge__c&lt;&gt;&quot;-&quot;,NOT(ISNUMBER(Std_Journey_Charge__c)))</errorConditionFormula>
    <errorDisplayField>Std_Journey_Charge__c</errorDisplayField>
    <errorMessage>Only numerical characters, periods (.) and dashes (-) are valid in the pricing fields.</errorMessage>
</ValidationRule>